<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="196dp"
            android:layout_height="61dp"
            android:layout_marginTop="4dp"
            android:text="@string/title1"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/male"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/male"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/height"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="55dp"
            android:ems="10"
            android:hint="@string/hight"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/year" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="55dp"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/strong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height" />

        <EditText
            android:id="@+id/strong"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginBottom="136dp"
            android:ems="10"
            android:hint="@string/strong"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="268dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strong"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/show" />

        <Button
            android:id="@+id/button"
            android:layout_width="158dp"
            android:layout_height="76dp"
            android:text="@string/commit"
            android:onClick="click"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.768" />

        <EditText
            android:id="@+id/year"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="56dp"
            android:ems="10"
            android:hint="@string/year"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/male" />

        <TextView
            android:id="@+id/strong_show2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="133dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="139dp"
            android:gravity="center"
            android:layout_marginBottom="11dp"
            android:text="@string/strong_show"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@+id/male"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>